# ha-client

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
examples/: list_entities.rs  quick_start.rs  usage.rs
src/: lib.rs
