[package]
name = "ha-client"
version = "0.1.0"
edition = "2021"
authors = ["Liangdi <wu@liangdi.me>"]
description = "A simple and type-safe Rust client library for Home Assistant API"
license = "MIT"
repository = "https://github.com/Liangdi/ha-client"
keywords = ["home-assistant", "home-automation", "iot", "api", "client"]
categories = ["api-bindings", "hardware-support"]

[dependencies]
anyhow = "1.0.102"
homeassistant-rs = "0.1.5"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
